--- a/exp.css
+++ b/exp.css
@@ -29,7 +29,9 @@ ul{
   width: 100%;
   height: auto;
   margin: 0;
+  
 }
+
 .bgimg{
   position: absolute; 
   width: 100%;
@@ -61,15 +63,30 @@ ul{
   background-color: var(--azure);
 }
 .button-text {
- font-weight: bold;
-  margin-right: 0;
+  font-family: 'Nunito';
+  font-size: 1.6rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.6rem;
+  letter-spacing: normal;
+  text-align: center;
+  color: var(--white);
 }
 .bgmar{
   position: absolute;
-  margin-top: 13.3rem;
+  margin-top: 12.3rem;
 }
 .SIX-MONTHS-ONLINE {
- margin: 0 0 0 7rem ;
+  font-family: 'Nunito';
+  font-size: 1.6rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.6rem;
+  letter-spacing: normal;
+  color: var(--white);
+ 
 }
 .Machine-Learning {
   font-family: 'Nunito';
@@ -80,7 +97,7 @@ ul{
   line-height: 7rem;
   letter-spacing: normal;
   color: var(--white);
-  margin: 2rem 0 1rem 7rem;
+  margin: 2rem 0 1rem 0;
 }
 .Become-a-machine-lea {
   font-family: 'Nunito';
@@ -91,7 +108,7 @@ ul{
   line-height: 1.42;
   letter-spacing: normal;
   color: var(--white);
-  margin: 0 0 1.5rem 7rem;
+  margin: 0 0 1.5rem 0;
 }
 .star{
   font-family: 'Nunito';
@@ -99,19 +116,20 @@ ul{
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
-  line-height: 2.6rem;
+  line-height: 1.63;
   letter-spacing: normal;
   color: var(--white);
-  margin-left: 7rem;
+
 }
 ._stars{
   padding-left: 2rem;
-  width: 12rem; 
+  width: 12rem;
+  
 }
 .rec{
   width: 163px;
   height: 36px;
-  margin:2rem 0 0 7rem;
+  margin-top: 20px;
   border: 1px solid white;
   border-radius: 2px;
   opacity: 10%;
@@ -120,19 +138,15 @@ ul{
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 1.6rem;
-  line-height: 2.6rem;
-  font-stretch: normal;
-  font-style: normal;
-  letter-spacing: normal;
+  line-height: 26px;
+  letter-spacing: 0;
   text-align: center;
-  color: var(--white); 
-}
-.prev{
-font-weight: bold;
+  color: var(--white);
+  
 }
 .banner-video{
   margin-bottom: 25px;
-  width: 235px;
+  width: 100%;
   height: 235px;
 }
 .carsous{
@@ -156,7 +170,13 @@ margin: 130px 0 0 0;
   height: 75px;
   margin: 20px 0 0 20px;
 }
-
+.f{
+  display: flex!important;
+  flex-direction: column!important;
+}
+/* .card-title{
+  margin: 15px 10px;
+} */
 .tabs{
   margin: 80px 0 70px 0px;
 }
@@ -164,59 +184,39 @@ margin: 130px 0 0 0;
   font-family: 'Nunito';
   font-weight: bold;
   font-size: 2rem;
-  /* text-align: center; */
+  text-align: center;
   line-height: 3rem;
   letter-spacing: normal;
   color: #3a5edd;
-  margin-right: 60px;
-}
-hr{
-  margin: 0;
+
 }
 .remaintext{
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 2rem;
-  /* text-align: center; */
+  text-align: center;
   line-height: 3rem;
   letter-spacing: normal;
   color: #383e69;
-  margin-right: 60px;
 }
-.nav-pills .nav-link {
-    background-color: #f0f5f9;
-}
-.button1{
-  width: 172px;
+.rectblue{
   height: 32px;
+  border: 1px solid white;
+  background-color: #f0f5f9;
+  margin: 0 20px 60px 0;
+ 
+}
+
+.rectbluetext{
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 1.6rem;
   line-height: 2.6rem;
   letter-spacing: normal;
-  text-align: center;
-  margin-right: 60px;
-}
-.button2{
-  width: 133px;
-  height: 32px;
-  font-family: 'Nunito';
-  font-weight: normal;
-  font-size: 1.6rem;
-  line-height: 2.6rem;
-  letter-spacing: normal;
-  text-align: center;
-  margin-right: 60px;
-  color: #383e69; 
-}
-.button3{
-  width: 149px;
-}
-.button4{
-  width: 180px;
-}
 
+  text-align: center;
 
+}
 .cloud{
   font-family: 'Nunito';
   font-weight: normal;
@@ -248,7 +248,7 @@ hr{
   width: 228px;
   height: 31px;
   border: 1px solid white;
-  margin:0 20px 25px 0;
+  margin:0 20px 29px 0;
 }
 .Tags {
   font-family: 'Nunito';
@@ -274,7 +274,6 @@ hr{
  
   width: 208px;
   height: 140px;
-  margin-right: 25px;
 }
 .caimg{
   width: 200px;
@@ -301,7 +300,7 @@ hr{
   line-height: 3rem;
   letter-spacing: normal;
   color: #1f2343;
- margin-bottom: 11px;
+  margin: 0 0 11px 70px;
 }
 .hiring{
   margin: 100px 0 0 0;
@@ -341,12 +340,9 @@ height: 576px;
   
   .bgimg{
      width: 100%;
-     height: 725px;
+     height: 576px;
   }
-   .carsous{
-    margin-top: 600px;
-  }
-  
+
 }
 
 
@@ -355,10 +351,10 @@ height: 576px;
   
  .bgimg{
      width: 100%;
-     height: 360%;
+     height: 330%;
   }
  .carsous{
-    margin-top: 900px;
+    margin-top: 832px;
   }
   
 }
