--- a/style.css
+++ b/style.css
@@ -14,19 +14,22 @@
   --warm-blue: #3a5edd;
   --butterscotch: #ffb44d;
 }
-html{
+
+html {
   font-size: 62.5%;
 }
+
 /* a{
   text-decoration: none;
 } */
 /* ul{
   list-style: none;
 } */
-li::marker{
+li::marker {
   color: #30abd6;
- font-size: 16px;
+  font-size: 16px;
 }
+
 .Course_Detail_01 {
   padding: 0;
   font-family: 'Nunito';
@@ -35,21 +38,25 @@ li::marker{
   height: auto;
   margin: 0;
 }
-.bgimg{
-  position: absolute; 
+
+.bgimg {
+  position: absolute;
   width: 100%;
 }
-.rectangle{
-  margin: 0 7rem;
+
+.rectangle {
+  padding: 0 7rem;
   padding-top: 2.5rem;
 }
+
 .alogoaicolour {
   /* width: 20.7rem;
   height: 3rem; */
   object-fit: contain;
 }
+
 .Home {
-  font-family:'Nunito';
+  font-family: 'Nunito';
   font-size: 1.6rem;
   font-weight: normal;
   font-stretch: normal;
@@ -59,35 +66,72 @@ li::marker{
   color: var(--white);
   margin-right: 4rem;
 }
-.und .active{
+
+.und .active {
   font-weight: bold;
   text-decoration: underline;
 }
+
 .Color {
   width: 11rem;
   height: 3.6rem;
   border-radius: 0.6rem;
   background-color: var(--azure);
 }
-.color{
+
+.color {
   width: 20rem;
   height: 3.6rem;
   border-radius: 0.6rem;
   background-color: var(--azure);
 }
-.colcolor{
+
+.colcolor {
   padding: 4.6rem 0 0 5rem;
   border-radius: 0.6rem;
+  height: 100%;
   background-color: #f0f5f9;
 }
+
 .button-text {
- font-weight: bold;
+  font-weight: bold;
   margin-right: 0;
 }
-.bgmar{
+
+.bgmar {
   position: absolute;
   margin-top: 13.3rem;
   padding: 0 7rem;
+}
+
+.navbar-toggler {
+  background: #26ae61;
+  border: none;
+  margin: 1.3rem 0;
+
+  padding: .7rem;
+  outline: none;
+
+}
+
+.navbar-toggler span {
+  display: block;
+  width: 2.2rem;
+  height: .2rem;
+  border: 1px;
+  background: #fff;
+
+
+}
+
+.navbar-toggler span+span {
+  margin-top: .4rem;
+  width: 2.2rem;
+
+}
+
+.navbar-toggler span+span+span {
+  width: 2.2rem;
 }
 
 .Machine-Learning {
@@ -101,6 +145,7 @@ li::marker{
   color: var(--white);
   margin: 2rem 0 1rem 0;
 }
+
 .Become-a-machine-lea {
   font-family: 'Nunito';
   font-size: 2.4rem;
@@ -112,7 +157,8 @@ li::marker{
   color: var(--white);
   margin: 0 0 1.5rem 0;
 }
-.star{
+
+.star {
   font-family: 'Nunito';
   font-size: 1.6rem;
   font-weight: normal;
@@ -123,19 +169,22 @@ li::marker{
   color: var(--white);
   /* margin-left: 7rem; */
 }
-._stars{
+
+._stars {
   padding-left: 2rem;
-  width: 12rem; 
+  width: 12rem;
 }
-.rec{
-  width: 163px;
-  height: 36px;
-  margin:2rem 0 0 0;
-  border: 1px  white;
+
+.rec {
+  width: 16.3rem;
+  height: 3.6rem;
+  margin: 2rem 0 0 0;
+  border: 1px white;
   border-radius: 2px;
   /* opacity: 10%; */
 }
-.users{
+
+.users {
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 1.6rem;
@@ -144,36 +193,39 @@ li::marker{
   font-style: normal;
   letter-spacing: normal;
   text-align: center;
-  color: var(--white); 
+  color: var(--white);
 }
 
 
-.banner-video:hover{
+.banner-video:hover {
   transform: scale(1.5);
 }
-.carsous{
-  margin-top: 460px;
-  padding: 0 7rem;
-  
+
+.carsous {
+  margin-top: 46rem;
+  /* padding: 0 0 0 7rem; */
+
 }
-.btnrhs{
+
+.btnrhs {
   width: 0%;
-  left: 80px;
+  left: 8rem;
 }
-.btnlhs{
+
+.btnlhs {
   width: 0%;
-  left: 20px;
+  left: 2rem;
 }
 
 
-.card{
-  border-radius: 10px;
-  /* width: 226px; */
-  height: 203px;
+.card {
+  border-radius: 1rem;
+  height: 20.3rem;
   float: left;
 }
-.cardtitle{
-  padding: 10px 0 0 10px;
+
+.cardtitle {
+  padding: 1rem 0 0 1rem;
   font-family: 'Nunito';
   font-weight: bold;
   font-size: 1.6rem;
@@ -181,36 +233,40 @@ li::marker{
   letter-spacing: normal;
   color: #1f2343;
 }
-.card-imgs{
-  width: 75px;
-  height: 75px;
 
-  padding: 20px 0 10px 20px ;
+.card-imgs {
+  width: 7.5rem;
+  height: 7.5rem;
+
+  padding: 2rem 0 1rem 2rem;
 }
 
-.tabs{
-  margin: 80px 0 70px 0px;
+.tabs {
+  margin: 8rem 0 7rem 0;
 }
-.nrmlpills{
-  color: #3a5edd ;
+
+.nrmlpills {
+  color: #3a5edd;
   padding: 0 7rem;
   background-color: #ffffff;
 }
 
-.details{
+.details {
   font-family: 'Nunito';
-  
+
   font-size: 2rem;
   /* text-align: center; */
   line-height: 3rem;
   letter-spacing: normal;
   color: #383e69;
-  margin-right: 60px;
+  margin-right: 6rem;
 }
-hr{
+
+hr {
   margin: 0;
 }
-.remaintext{
+
+.remaintext {
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 2rem;
@@ -218,98 +274,114 @@ hr{
   line-height: 3rem;
   letter-spacing: normal;
   color: #383e69;
-  margin-right: 60px;
+  margin-right: 6rem;
 }
-.cloimg{
+
+.cloimg {
   background-color: blue;
+  border-radius: 1rem 1rem 0 0;
 }
-.nrmlpills .nav-item .active  {
+
+.nrmlpills .nav-item .active {
   background-color: #ffffff;
   color: #0d6efd;
-  font-weight: bold; 
+  font-weight: bold;
 }
-.accorques{
+
+.accorques {
   font-family: 'Nunito';
   font-size: 2rem;
   line-height: 3rem;
   letter-spacing: normal;
   color: #1f2343;
 }
-.h2text{
+
+.h2text {
   font-family: 'Nunito';
   font-size: 4rem;
   line-height: 5rem;
   letter-spacing: normal;
   color: #1f2343;
 }
-.h3text{
+
+.h3text {
   font-family: 'Nunito';
   font-size: 2.4rem;
   line-height: 3.4rem;
   letter-spacing: normal;
   color: #1f2343;
 }
-.h4text{
+
+.h4text {
   font-size: 2rem;
   line-height: 3rem;
   letter-spacing: normal;
   color: #383e69;
 
 }
-.h5text{
- 
+
+.h5text {
+
   font-size: 1.6rem;
   line-height: 2.6rem;
   letter-spacing: normal;
   color: #383e69;
 }
-.roundedpill{
+
+.roundedpill {
   padding: 0 7rem;
 }
-.roundedpill .nav-item .nav-link{
+
+.roundedpill .nav-item .nav-link {
+  width: auto;
   background-color: #f0f5f9;
 }
-.roundedpill .nav-item .active{
+
+.roundedpill .nav-item .active {
   background-color: #0d6efd;
   color: #ffffff;
 }
-.overviewimg{
+
+.overviewimg {
   padding: 0 7rem;
 }
 
-.button1{
-  width: 172px;
-  height: 32px;
+.button1 {
+  width: 17.2rem;
+  height: 3.2rem;
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 1.6rem;
   line-height: 2.6rem;
   letter-spacing: normal;
   text-align: center;
-  
+
   color: #383e69;
 }
-.button2{
-  width: 133px;
-  height: 32px;
+
+.button2 {
+  width: 13.3rem;
+  height: 3.2rem;
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 1.6rem;
   line-height: 2.6rem;
   letter-spacing: normal;
   text-align: center;
- 
-  color: #383e69; 
+
+  color: #383e69;
 }
-.button3{
-  width: 149px;
+
+.button3 {
+  width: 14.rem;
 }
-.button4{
-  width: 180px;
+
+.button4 {
+  width: 18rem;
 }
 
 
-.cloud{
+.cloud {
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 1.6rem;
@@ -317,37 +389,43 @@ hr{
   color: #383e69;
   letter-spacing: normal;
 }
-.skillsec{
+
+.skillsec {
   padding: 0 7rem;
 }
-.skills{
-  margin-top: 100px;
+
+.skills {
+  margin-top: 10rem;
   background-color: #30abd6;
   width: 100%;
   height: auto;
   border: 1px solid white;
   border-radius: 10px;
 }
-.gain{
+
+.gain {
   font-family: 'Nunito';
   font-weight: bold;
   font-size: 4rem;
   text-align: center;
-  margin:31px 0;
+  margin: 3.1rem 0;
   letter-spacing: normal;
   line-height: 5rem;
   color: #ffffff;
 }
-.skillbox{
-  width: 228px;
-  height: 31px;
+
+.skillbox {
+  width: 22.8rem;
+  height: 3.1rem;
   border: 1px solid white;
-  margin:0 20px 25px 0;
+  margin: 0 2rem 2.5rem 0;
 }
-.toolsec{
-  margin-top: 100px;
+
+.toolsec {
+  margin-top: 10rem;
   padding: 0 7rem;
 }
+
 .Tags {
   font-family: 'Nunito';
   font-size: 1.4rem;
@@ -359,173 +437,498 @@ hr{
   color: var(--white);
   text-align: center;
 }
-.tools{
+
+.tools {
   font-family: 'Nunito';
   font-weight: bold;
   font-size: 4rem;
   line-height: 5rem;
   letter-spacing: normal;
   color: #1f2343;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
-.carprev{
+
+.carprev {
   width: 8%;
 }
-.data1{
-  width: 130px;
-  height: 26px;
+
+.data1 {
+  width: 13rem;
+  height: 2.6rem;
   background-color: white;
 }
-.data2{
-  width: 224px;
-  height: 26px;
+
+.data2 {
+  width: 22.4rem;
+  height: 2.6rem;
   background-color: white;
 
 }
-.cards1{
- 
-  width: 208px;
-  height: 140px;
+
+.cards1 {
+
+  width: auto;
+  height: 14rem;
   /* margin-right: 25px; */
 }
-.caimg{
-  width: 200px;
-  height: 130px;
+
+.caimg {
+  width: 20rem;
+  height: 13rem;
+  margin: .5rem 0 0 .5rem;
 }
 
-.benefits{
-  margin-top: 100px;
+.benefits {
+  margin-top: 10rem;
   padding: 6rem 7rem;
   background-color: #f0f5f9;
 }
-.pricecon{
-  padding-left: 168px;
-  padding-right: 168px;
+
+.pricecon {
+  padding-left: 7rem;
+  padding-right: 7rem;
+  padding-bottom: 7rem;
 }
-.data{
+
+.data {
   font-family: 'Nunito';
   font-weight: normal;
   font-size: 1.6rem;
   line-height: 2.6rem;
   letter-spacing: normal;
   color: #383e69;
-  margin: 0 0 20px 0;
+  margin: 0 0 2rem 0;
 }
-.des{
+
+.des {
   font-family: 'Nunito';
   font-weight: bold;
   font-size: 2rem;
   line-height: 3rem;
   letter-spacing: normal;
   color: #1f2343;
-  margin-bottom: 11px;
+  margin-bottom: 1.1rem;
 }
-.graph{
+
+.graph {
   padding-left: 7rem;
 }
-.hiring{
-  margin: 100px 0 0 0;
+
+.hiring {
+  margin: 10rem 0 0 0;
   padding: 0 7rem;
 }
-.hiringrec{
-  width: 303px;
-  height: 33px;
+
+.hiringrec {
+  width: 30.3rem;
+  height: 3.3rem;
   border-radius: 2px;
   background-color: #f0f5f9;
-  margin-top: 75px;
+  margin-top: 7.5rem;
 }
-.tony{
+
+.tony {
   font-family: 'Nunito';
   font-weight: bold;
   font-size: 2.4rem;
   line-height: 3.4rem;
 }
-.partnersec{
-  margin-top: 100px;
+
+.partnersec {
+  margin-top: 10rem;
   padding: 0 7rem;
 }
-.partnercarind{
-  top: 180px;
-  height: 50px;
+
+.partnercarind {
+
+  top: 17.5rem;
+  height: 5rem;
   text-align: center;
-  /* width: 6%; */
+  width: 6%;
+  left: 38.2rem;
 }
-.prevs{
-    width: 0%;
-    top: 195px;
-    right: 0px;
-    left: 530px;
+
+/* .prevs {
+  width: 0%;
+  top: 19.5rem;
+  right: 0;
+  left: 53rem;
 
 }
-.nexts{
+
+.nexts {
   width: 0%;
-  top: 195px;
-left: 670px;
+  top: 19.5rem;
+  left: 67rem;
+} */
+
+.accordion-item {
+  margin-bottom: 1.5rem;
+  border: 1px solid #e5eff2;
 }
+
+.accordion-item:not(:first-of-type) {
+  border-top: 1px solid #e5eff2;
+  border-radius: 10px;
+}
+
+.accordion-button:not(.collapsed) {
+  box-shadow: none;
+  background: none;
+  color: white;
+}
+
+.accordion-button {
+  padding: 0 1.2rem;
+  margin: 1rem 0;
+}
+
+.accordion-button:focus {
+  box-shadow: none;
+}
+
+.certifications {
+  width: 3rem;
+  height: 3rem;
+  object-fit: contain;
+  background: #f0f5f9;
+}
+
+.Rectangle-Copy-72 {
+  width: 5rem;
+  height: 5rem;
+  padding: 1rem;
+  border-radius: 10px;
+  background-color: var(--pale-grey);
+}
+
+.minirectangle {
+  width: 3rem;
+  height: 3rem;
+  padding: .7rem;
+  border-radius: .4rem;
+  background-color: #e4ecf3;
+}
+
+.line1 {
+  display: inline-block;
+  width: 62%;
+  border-bottom: 1px solid grey;
+  line-height: 0;
+}
+
+.line2 {
+  display: inline-block;
+  width: 67%;
+  border-bottom: 1px solid grey;
+  line-height: 0
+}
+
+.accordion-item {
+
+  border-radius: 1rem;
+  box-shadow: 0 1.2rem 3rem --1.9rem rgba(0, 0, 0, 0.2);
+  border: solid 1px #e5eff2;
+  background-color: var(--white);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
 @media (min-width: 1281px) {
-  .bgimg{ width: 100%;
-height: 576px;
+  .bgimg {
+    width: 100%;
+    height: 57.6rem;
   }
 
-  
+
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
-   .bgimg{
-     width: 100%;
-     height: 576px;
+  .bgimg {
+    width: 100%;
+    height: 57.6rem;
   }
-  
+
+  .line1 {
+    width: 52%;
+  }
+
+  .line2 {
+    width: 58%;
+  }
+
 }
 
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  
-  .bgimg{
-     width: 100%;
-     height: 725px;
+
+  .bgimg {
+    width: 100%;
+    height: 72.5rem;
   }
-   .carsous{
-    margin-top: 600px;
+
+  .carsous {
+    margin-top: 60rem;
   }
-  
+
+  .overviewimg .col-md-4S {
+    text-align: center;
+  }
+
+  .line1 {
+    width: 34%;
+  }
+
+  .line2 {
+    width: 42%;
+  }
+
 }
 
 
 
 @media (min-width: 481px) and (max-width: 767px) {
-  
- .bgimg{
-     width: 100%;
-     height: 360%;
+
+  .bgimg {
+    width: 100%;
+    height: 360%;
   }
- .carsous{
-    margin-top: 900px;
+
+  .carsous {
+    margin-top: 90rem;
   }
-  
+
+  .overviewimg .col-md-4 {
+    text-align: center;
+  }
+
+  .line1 {
+    width: 0;
+  }
+
+  .line2 {
+    width: 0;
+  }
+
+  .rectangle {
+    padding: 0 3rem;
+  }
+
+  .bgmar {
+    margin-top: 10rem;
+    padding: 0 3rem;
+  }
+
+  .nrmlpills {
+    padding: 0 3rem;
+  }
+
+  .roundedpill {
+    padding: 0 3rem;
+  }
+
+  .overviewimg {
+    padding: 0 3rem;
+  }
+
+  .skillsec {
+    padding: 0 3rem;
+  }
+
+  .toolsec {
+    padding: 0 2rem;
+    margin-top: 5rem;
+
+  }
+
+  .benefits {
+    padding: 2rem;
+    margin-top: 7rem;
+  }
+
+  .graph {
+    padding: 2rem;
+  }
+
+  .hiring {
+    padding: 0 2rem;
+    margin-top: 7rem;
+
+  }
+
+  .partnersec {
+    margin-top: 7rem;
+    padding: 0 2rem;
+
+  }
+
+  .skills {
+    margin-top: 7rem;
+  }
+
 }
 
 
 @media (min-width: 320px) and (max-width: 480px) {
-   .bgimg{
-     width: 100%;
-     height: 370%;
+  .bgimg {
+    width: 100%;
+    height: 350%;
   }
-  .carsous{
-    margin-top: 915px;
+
+  .carsous {
+    margin-top: 91.5rem;
+  }
+
+  .line1 {
+    width: 0;
+  }
+
+  .line2 {
+    width: 0;
+  }
+
+  .rectangle {
+    padding: 0 2rem;
+  }
+
+  .bgmar {
+    margin-top: 8rem;
+    padding: 0 2rem;
+  }
+
+  .nrmlpills {
+    padding: 0;
+  }
+
+  .roundedpill {
+    padding: 0;
+  }
+
+  .overviewimg {
+    padding: 0 2rem;
+  }
+
+  .skillsec {
+    padding: 0;
+  }
+
+  .toolsec {
+    padding: 0 2rem;
+    margin-top: 5rem;
+
+  }
+
+  .benefits {
+    padding: 2rem;
+    margin-top: 5rem;
+  }
+
+  .graph {
+    padding: 2rem;
+  }
+
+  .hiring {
+    padding: 0 2rem;
+    margin-top: 5rem;
+
+  }
+
+  .partnersec {
+    padding: 0 2rem;
+    margin-top: 5rem;
+
+  }
+
+  .skills {
+    margin-top: 5rem;
   }
 }
 
-@media (min-width: 0px) and (max-width: 319px) {
-   .bgimg{
-     width: 100%;
-     height: 370%;
+@media (min-width: 50px) and (max-width: 319px) {
+  .bgimg {
+    width: 100%;
+    height: 350%;
   }
-  .carsous{
-    margin-top: 915px;
+
+  .carsous {
+    margin-top: 91.5rem;
+  }
+
+  .overviewimg .col-md-4 {
+    text-align: center;
+  }
+
+  .line1 {
+    width: 0;
+  }
+
+  .line2 {
+    width: 0;
+  }
+
+  .rectangle {
+    padding: 0 2rem;
+  }
+
+  .bgmar {
+    margin-top: 8rem;
+    padding: 0 2rem;
+  }
+
+  .nrmlpills {
+    padding: 0;
+  }
+
+  .roundedpill {
+    padding: 0;
+  }
+
+  .overviewimg {
+    padding: 0 2rem;
+  }
+
+  .skillsec {
+    padding: 0;
+  }
+
+  .toolsec {
+    padding: 0 2rem;
+    margin-top: 5rem;
+  }
+
+  .benefits {
+    padding: 2rem;
+    margin-top: 5rem;
+  }
+
+  .graph {
+    padding: 2rem;
+  }
+
+  .hiring {
+    padding: 0 2rem;
+    margin-top: 5rem;
+
+  }
+
+  .partnersec {
+    padding: 0 2rem;
+    margin-top: 5rem;
+
+  }
+
+  .skills {
+    margin-top: 5rem;
   }
 }
-
